added oaut2 github, added sec config, added login controller for testing

--- a/backend/TimeRegistration/src/main/resources/application.properties
+++ b/backend/TimeRegistration/src/main/resources/application.properties
@@ -8,3 +8,23 @@ spring.application.name=TimeRegistration
 #spring.datasource.url=${JDBC_DATABASE_URL}
 #spring.datasource.username=${JDBC_USERNAME}
 #spring.datasource.password=${JDBC_PASSWORD}
+
+
+# only for github - Make new lines with new info(Remember to register at their page)
+#spring.security.oauth2.client.registration.github.client-id=${CLIENT-ID}
+#spring.security.oauth2.client.registration.github.client-secret=${CLIENT-SECRET}
+
+#spring.security.oauth2.client.registration.github.client-id=
+#spring.security.oauth2.client.registration.github.client-secret=
+
+
+
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.web=DEBUG
+
+
+#spring.security.oauth2.client.registration.github.scope=read:user,user:email
+#spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+#spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+#spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+#spring.security.oauth2.client.provider.github.user-name-attribute=id
